--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "moongose": "^1.0.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "redux-persist": "^6.0.0"
   }
 }
