--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
     "moongose": "^1.0.0",
     "nodemon": "^3.1.4",
     "redux-persist": "^6.0.0"
